implement Zoom out button and reduced CSS repetition

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -1,4 +1,4 @@
-@*Page for viewing full-sized images*@
+﻿@*Page for viewing full-sized images*@
 @page "/view/{id}"
 @using PSS.Backend
 @layout EmptyLayout
@@ -13,10 +13,10 @@
     else
     {
         <img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" alt="" />
-        <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
-        <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="zoomRange">
-        
-        <button onclick="window.history.back();" class="circle_icon_btn"><span class="material-icons" >west</span></button>
+        <button onclick="document.querySelector('img').style.height = ('100%'); document.getElementById('zoomRangeId').value = '100';" class="icon_btn reset_zoom_btn"><span class="material-icons">zoom_out</span></button>
+        <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" id="zoomRangeId" class="zoomRange">
+
+        <button onclick="window.history.back();" class="icon_btn back_btn"><span class="material-icons">west</span></button>
     }
 }
 
