--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -16,7 +16,7 @@
         <button onclick="window.history.back();" class="icon_btn back_btn"><span class="material-icons">west</span></button>
         <button onclick="document.querySelector('img').style.height = ('100%'); document.getElementById('zoomRangeId').value = '100';" class="icon_btn reset_zoom_btn"><span class="material-icons">zoom_out</span></button>
         <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" id="zoomRangeId" class="zoomRange">
-        <button onclick="" class="icon_btn three_dots_btn"><span class="material-icons">more_vert</span></button>
+        @*TODO: make me do something!*@ <button onclick="" class="icon_btn three_dots_btn"><span class="material-icons">more_vert</span></button>
     }
 }
 
