got a div with 1 button in it

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -16,8 +16,13 @@
         <button onclick="window.history.back();" class="round_view_icon_btn back_btn"><span class="material-icons">west</span></button>
         <button onclick="document.querySelector('img').style.height = ('100%'); document.getElementById('zoomRangeId').value = '100';" class="round_view_icon_btn reset_zoom_btn"><span class="material-icons">zoom_out</span></button>
         <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" id="zoomRangeId" class="zoomRange">
-        @*TODO: make me do something!*@ <button onclick="" class="round_view_icon_btn three_dots_btn"><span class="material-icons">more_vert</span></button>
-        <button onclick="" class="round_view_icon_btn delete_btn"><svg width="24px" height="24px" class="material-icons" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
+
+        <div class="view-btns-div">
+            <button onclick="" class="round_view_icon_btn three_dots_btn"><span class="material-icons">more_vert</span></button>
+        </div>
+
+        <!--<button onclick="" class="round_view_icon_btn three_dots_btn"><span class="material-icons">more_vert</span></button>-->
+        @*<button onclick="" class="round_view_icon_btn delete_btn"><svg width="24px" height="24px" class="material-icons" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>*@
     }
 }
 
