--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -26,6 +26,17 @@
     opacity: 0.7;
 }
 
+/*Div containing all buttons*/
+.view-btns-div {
+    align-items: center;
+    display: inline-flex;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 4px;
+    right: 1px;
+}
+
 /*Buttons*/
 /*These buttons all have a lot of stuff in common, so in their class="..." thing, I put this class and then the button's actual class*/
 .round_view_icon_btn {
@@ -41,8 +52,9 @@
     overflow: hidden;
     transition: .4s;
     position: absolute;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
 }
 
     .round_view_icon_btn:hover {
@@ -57,7 +69,8 @@
 
 .reset_zoom_btn {
     right: 200px;
-    top: 64px;
+    top: 68px;
+    margin-right: 2px;
 }
 
 .three_dots_btn {
