testing dropdown. Looks good so far

--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -3,6 +3,25 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
+<script>
+    //Drop-down js for Photo Viewer: https://www.w3schools.com/howto/howto_js_dropdown.asp
+    function toggleDropdown() { document.getElementById("myDropdown").classList.toggle("show"); }
+
+    //Close the dropdown menu if the user clicks outside of it
+    window.onclick = function (event) {
+        if (!event.target.matches('.dropbtn')) {
+            var dropdowns = document.getElementsByClassName("dropdown-content");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+                var openDropdown = dropdowns[i];
+                if (openDropdown.classList.contains('show')) {
+                    openDropdown.classList.remove('show');
+                }
+            }
+        }
+    }
+</script>
+
 <html lang="en">
 <head>
     <base href="~/" /> @* <-- THIS IS NECESSARY: https://stackoverflow.com/questions/59833137/navigating-to-blazor-page-with-parameter-does-not-render-layout-or-anything*@
