--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -2,6 +2,54 @@
 @page "/test"
 @layout EmptyLayout
 
+<style>
+    /* TODO: temporary */
+    .dropbtn {
+        background-color: #3498DB;
+        color: #f1f1f1;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+    }
+
+    /* Div containing the buttons in the dropdown */
+    .dropdown-content {
+        border-radius: 4px;
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+    }
+
+        /* Links inside the dropdown */
+        .dropdown-content a {
+            font-family: 'Product Sans';
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+            /* Change color of dropdown links on hover */
+            .dropdown-content a:hover {
+                background-color: #ddd;
+            }
+
+    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    .show {
+        display: block;
+    }
+</style>
+
+<button onclick="toggleDropdown()" class="dropbtn">Dropdown</button>
+<div id="myDropdown" class="dropdown-content">
+    <a href="#" style="border-top-right-radius: 4px; border-top-left-radius: 4px;">Add To/Remove From Album</a>
+    <a href="#">Use As Album Cover</a>
+    <a href="#">Archive</a>
+    <a href="#">Download</a>
+    <a href="#" style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;">Delete</a>
+</div>
+
 @code {
 
 }
