remove/modify comments

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -21,7 +21,6 @@
         background-color: #f1f1f1;
     }
 
-        /* Links inside the dropdown */
         .dropdown-content a {
             font-family: 'Product Sans';
             color: black;
@@ -30,12 +29,11 @@
             display: block;
         }
 
-            /* Change color of dropdown links on hover */
             .dropdown-content a:hover {
                 background-color: #ddd;
             }
 
-    /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+    /* Show the dropdown menu */
     .show {
         display: block;
     }
