rename dropdown div

--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -1,4 +1,4 @@
-﻿@*A blank page just for testing stuff*@
+@*A blank page just for testing stuff*@
 @page "/test"
 @layout EmptyLayout
 
@@ -40,7 +40,8 @@
 </style>
 
 <button onclick="toggleDropdown()" class="dropbtn">Dropdown</button>
-<div id="myDropdown" class="dropdown-content">
+
+<div id="dropdown" class="dropdown-content">
     <a href="#" style="border-top-right-radius: 4px; border-top-left-radius: 4px;">Add To/Remove From Album</a>
     <a href="#">Use As Album Cover</a>
     <a href="#">Archive</a>
