--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <script>
     //Drop-down js for Photo Viewer: https://www.w3schools.com/howto/howto_js_dropdown.asp
-    function toggleDropdown() { document.getElementById("myDropdown").classList.toggle("show"); }
+    function toggleDropdown() { document.getElementById("dropdown").classList.toggle("show"); }
 
     //Close the dropdown menu if the user clicks outside of it
     window.onclick = function (event) {
