--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -33,7 +33,7 @@
                 background-color: #ddd;
             }
 
-    /* Show the dropdown menu */
+    /* For toggling the visibiity of the dropdown menu */
     .show {
         display: block;
     }
@@ -48,7 +48,3 @@
     <a href="#">Download</a>
     <a href="#" style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;">Delete</a>
 </div>
-
-@code {
-
-}
