--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -13,20 +13,32 @@
         cursor: pointer;
     }
 
+    .dropbtn-icon {
+        margin-right: 6px;
+    }
+
     /* Div containing the buttons in the dropdown */
     .dropdown-content {
         border-radius: 4px;
         display: none;
         position: absolute;
         background-color: #f1f1f1;
+        width: auto;
+        height: auto;
     }
 
         .dropdown-content a {
             font-family: 'Product Sans';
             color: black;
             padding: 12px 16px;
+            padding-left: 8px;
             text-decoration: none;
-            display: block;
+            display: flex;
+            word-break: break-all;
+            word-break: break-word;
+            word-wrap: break-word;
+            -webkit-box-align: center;
+            align-items: center;
         }
 
             .dropdown-content a:hover {
@@ -45,6 +57,6 @@
     <a href="#" style="border-top-right-radius: 4px; border-top-left-radius: 4px;">Add To/Remove From Album</a>
     <a href="#">Use As Album Cover</a>
     <a href="#">Archive</a>
-    <a href="#">Download</a>
+    <a href="#"><span class="material-icons dropbtn-icon">download</span>Download</a>
     <a href="#" style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;">Delete</a>
 </div>
