--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -47,16 +47,16 @@
 
     /* For toggling the visibiity of the dropdown menu */
     .show {
-        display: block;
+        display: block; 
     }
 </style>
 
 <button onclick="toggleDropdown()" class="dropbtn">Dropdown</button>
 
 <div id="dropdown" class="dropdown-content">
-    <a href="#" style="border-top-right-radius: 4px; border-top-left-radius: 4px;">Add To/Remove From Album</a>
-    <a href="#">Use As Album Cover</a>
-    <a href="#">Archive</a>
+    <a href="#" style="border-top-right-radius: 4px; border-top-left-radius: 4px;"><span class="material-icons dropbtn-icon">photo_album</span>Add To/Remove From Album</a>
+    <a href="#"><span class="material-icons dropbtn-icon">image</span>Use As Album Cover</a>
+    <a href="#"><span class="material-icons dropbtn-icon">archive</span>Archive</a>
     <a href="#"><span class="material-icons dropbtn-icon">download</span>Download</a>
-    <a href="#" style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;">Delete</a>
+    <a href="#" style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;"><svg width="24px" height="24px" class="material-icons dropbtn-icon" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg>Delete</a>
 </div>
