--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -3,25 +3,6 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<script>
-    //Drop-down js for Photo Viewer: https://www.w3schools.com/howto/howto_js_dropdown.asp
-    function toggleDropdown() { document.getElementById("dropdown").classList.toggle("show"); }
-
-    //Close the dropdown menu if the user clicks outside of it
-    window.onclick = function (event) {
-        if (!event.target.matches('.dropbtn')) {
-            var dropdowns = document.getElementsByClassName("dropdownDiv");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-                var openDropdown = dropdowns[i];
-                if (openDropdown.classList.contains('show')) {
-                    openDropdown.classList.remove('show');
-                }
-            }
-        }
-    }
-</script>
-
 <html lang="en">
 <head>
     <base href="~/" /> @* <-- THIS IS NECESSARY: https://stackoverflow.com/questions/59833137/navigating-to-blazor-page-with-parameter-does-not-render-layout-or-anything*@
@@ -32,6 +13,7 @@
     <link href="~/css/View.css" rel="stylesheet" />
     <link href="~/css/Index.css" rel="stylesheet" />
     <link href="~/css/404.css" rel="stylesheet" />
+    <script src="PSS.js"></script>
     <link rel="icon" href="gphotos icon.png">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"> @*https://stackoverflow.com/questions/50303454/how-to-use-the-new-material-design-icon-themes-outlined-rounded-two-tone-and*@
 </head>
