--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -63,11 +63,6 @@
 }
 
 /*This seems pretty terrible but oh well*/
-.three_dots_btn {
-    right: 1px;
-    top: 7px;
-}
-
 .delete_btn {
     right: 49px;
     top: 7px;
@@ -81,4 +76,57 @@
 .info_btn {
     right: 145px;
     top: 7px;
+}
+
+/* Dropdown stuff: https://www.w3schools.com/howto/howto_css_dropdown.asp */
+.three_dots_btn {
+    position: absolute;
+    right: 1px;
+    top: 7px;
+}
+
+.dropdown {
+    display: inline-block;
+    width: 252px;
+    height: auto;
+}
+
+.dropdown-content {
+    right: 0;
+    top: 55px;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    border-radius: 4px;
+}
+
+    .dropdown-content a {
+        font-family: 'Product Sans';
+        color: black;
+        padding: 12px 16px;
+        padding-left: 5px;
+        text-decoration: none;
+        display: flex;
+        word-break: break-all;
+        word-break: break-word;
+        word-wrap: break-word;
+        -webkit-box-align: center;
+        align-items: center;
+    }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.dropbtn-icon {
+    margin: 2px;
+    margin-right: 6px;
 }
