--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -20,17 +20,17 @@
         <div class="dropdown">
             <button class="round_view_icon_btn three_dots_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg></button>
             <div class="dropdown-content">
-                <a href="#" style="border-top-right-radius: 4px; border-top-left-radius: 4px;"><span class="material-icons dropbtn-icon">photo_album</span>Add To/Remove From Album</a>
-                <a href="#"><span class="material-icons dropbtn-icon">image</span>Use As Album Cover</a>
-                <a href="#"><span class="material-icons dropbtn-icon">archive</span>Archive</a>
-                <a href="#"><span class="material-icons dropbtn-icon">download</span>Download</a>
-                <a href="#" style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;"><svg width="24px" height="24px" class="material-icons dropbtn-icon" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg>Delete</a>
+                <a onclick="notImplemented();" style="border-top-right-radius: 4px; border-top-left-radius: 4px;"><span class="material-icons dropbtn-icon">photo_album</span>Add To/Remove From Album</a>
+                <a onclick="notImplemented();"><span class="material-icons dropbtn-icon">image</span>Use As Album Cover</a>
+                <a onclick="notImplemented();"><span class="material-icons dropbtn-icon">archive</span>Archive</a>
+                <a onclick="notImplemented();"><span class="material-icons dropbtn-icon">download</span>Download</a>
+                <a onclick="notImplemented();" style="border-bottom-right-radius: 4px; border-bottom-left-radius: 4px;"><svg width="24px" height="24px" class="material-icons dropbtn-icon" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg>Delete</a>
             </div>
         </div>
 
-        <button onclick="" class="round_view_icon_btn delete_btn"><svg width="24px" height="24px" class="material-icons" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
-        <button onclick="" class="round_view_icon_btn star_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"></path></svg></button>
-        <button onclick="" class="round_view_icon_btn info_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"></path></svg></button>
+        <button onclick="notImplemented();" class="round_view_icon_btn delete_btn"><svg width="24px" height="24px" class="material-icons" style="fill: white;" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
+        <button onclick="notImplemented();" class="round_view_icon_btn star_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"></path></svg></button>
+        <button onclick="notImplemented();" class="round_view_icon_btn info_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"></path></svg></button>
     }
 }
 
