--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -83,7 +83,7 @@
     top: 7px;
 }
 
-/* Dropdown stuff: https://www.w3schools.com/howto/howto_css_dropdown.asp */
+/* 3 dots dropdown stuff: https://www.w3schools.com/howto/howto_css_dropdown.asp */
 .three_dots_btn {
     position: fixed;
     right: 1px;
