--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -17,7 +17,7 @@
         <button onclick="document.querySelector('img').style.height = ('100%'); document.getElementById('zoomRangeId').value = '100';" class="round_view_icon_btn reset_zoom_btn"><span class="material-icons">zoom_out</span></button>
         <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" id="zoomRangeId" class="zoomRange">
 
-        <div class="dropdown">
+        <div class="dots-dropdown">
             <button class="round_view_icon_btn three_dots_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg></button>
             <div class="dropdown-content">
                 <a onclick="notImplemented();" style="border-top-right-radius: 4px; border-top-left-radius: 4px;"><span class="material-icons dropbtn-icon">photo_album</span>Add To/Remove From Album</a>
