move dots dropdown up a bit

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -19,7 +19,7 @@
 
         <div class="dots-dropdown">
             <button class="round_view_icon_btn three_dots_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg></button>
-            <div class="dropdown-content">
+            <div class="dots-dropdown-content">
                 <a onclick="notImplemented();" style="border-top-right-radius: 4px; border-top-left-radius: 4px;"><span class="material-icons dropbtn-icon">photo_album</span>Add To/Remove From Album</a>
                 <a onclick="notImplemented();"><span class="material-icons dropbtn-icon">image</span>Use As Album Cover</a>
                 <a onclick="notImplemented();"><span class="material-icons dropbtn-icon">archive</span>Archive</a>
