date and time elements should be position correctly. They just say "date" and "time" tho

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -37,9 +37,8 @@
             <button onclick="notImplemented();" class="round_view_icon_btn info_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"></path></svg></button>
             <div class="info-dropdown-content">
                 <span class="material-icons info-dropdown-icon"><svg width="24px" height="24px"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg></span>
-                <span class="info-dropdown-bigtext">Create a DB function to get the date/time for a single path and use it here lmao</span>
-                @*<span class="nav_btn"><span class="material-icons"></span><span class="nav_btn_text">Settings</span></span>*@
-                @*<p class="info-dropdown-smalltext">Time</p>*@
+                <span class="info-dropdown-bigtext">Date</span>
+                <span class="info-dropdown-smalltext">Time</span>
             </div>
         </div>
     }
