--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -12,6 +12,8 @@
     }
     else
     {
+        DateTime dateTaken = Connection.GetDateTaken(id);
+
         <img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" alt="" />
         <button onclick="window.history.back();" class="round_view_icon_btn back_btn"><span class="material-icons">west</span></button>
         <button onclick="document.querySelector('img').style.height = ('100%'); document.getElementById('zoomRangeId').value = '100';" class="round_view_icon_btn reset_zoom_btn"><span class="material-icons">zoom_out</span></button>
@@ -37,8 +39,8 @@
             <button onclick="notImplemented();" class="round_view_icon_btn info_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"></path></svg></button>
             <div class="info-dropdown-content">
                 <span class="material-icons info-dropdown-icon"><svg width="24px" height="24px"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg></span>
-                <span class="info-dropdown-bigtext">@Connection.GetDateTaken(id).ToString("MMM d, yyyy")</span>
-                <span class="info-dropdown-smalltext">@Connection.GetDateTaken(id).ToString("ddd, h:m:s tt")</span>
+                <span class="info-dropdown-bigtext">@dateTaken.ToString("MMM d, yyyy")</span>
+                <span class="info-dropdown-smalltext">@dateTaken.ToString("ddd, h:m:s tt")</span>
             </div>
         </div>
     }
