--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -145,6 +145,31 @@
     margin-right: 12px;
 }
 
+.info-dropdown-btn {
+    color: #3c4043;
+    fill: #3c4043;
+    background: none;
+    border: none;
+    font-family: Product Sans;
+    text-align: center;
+    line-height: 50%;
+    border-radius: 50%;
+    text-align: center;
+    vertical-align: middle;
+    overflow: hidden;
+    transition: .4s;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 185px;
+    top: 8px;
+}
+
+    .info-dropdown-btn:hover {
+        background-color: rgba(211, 211, 211, 0.1);
+        cursor: pointer;
+    }
+
 .info-dropdown-bigtext {
     font-family: 'Product Sans';
     position: absolute;
