--- a/PSS/wwwroot/css/View.css
+++ b/PSS/wwwroot/css/View.css
@@ -140,9 +140,10 @@
 .info-dropdown-icon {
     fill: #3c4043;
     fill: rgba(0, 0, 0, .54);
-    margin-left: 12px;
-    margin-top: 20px;
-    margin-right: 12px;
+    position: absolute;
+    padding-left: 12px;
+    padding-top: 20px;
+    padding-right: 12px;
 }
 
 .info-dropdown-btn {
@@ -174,6 +175,7 @@
     font-family: 'Product Sans';
     position: absolute;
     padding-top: 15px;
+    padding-left: 45px;
     letter-spacing: .00625em;
     font-weight: 400;
     color: #3c4043;
@@ -183,8 +185,8 @@
 .info-dropdown-smalltext {
     font-family: 'Product Sans';
     position: absolute;
-    margin-top: 15px;
-    padding-top: 20px;
+    padding-top: 34px;
+    padding-left: 45px;
     letter-spacing: .01428571em;
     font-weight: 400;
     color: #5f6368;
