trying to make info thing less shitty

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -40,8 +40,8 @@
             <div class="info-dropdown-content">
                 <span class="material-icons info-dropdown-icon"><svg width="24px" height="24px"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg></span>
                 <span class="info-dropdown-bigtext">@dateTaken.ToString("MMM d, yyyy")</span>
-                <span class="info-dropdown-smalltext">@dateTaken.ToString("ddd, h:m:s tt")</span>
-                <button onclick="notImplemented();" class="info-dropdown-btn"><svg width="24px" height="24px" viewBox="0 0 24 24"><path d="M20.41 4.94l-1.35-1.35c-.78-.78-2.05-.78-2.83 0L3 16.82V21h4.18L20.41 7.77c.79-.78.79-2.05 0-2.83zm-14 14.12L5 19v-1.36l9.82-9.82 1.41 1.41-9.82 9.83z"></path></svg></button>
+                <span class="info-dropdown-smalltext">@dateTaken.ToString("ddd, h:m tt")</span>
+                <button onclick="notImplemented();" class="info-dropdown-edit-btn" style="top: 7px"><svg width="24px" height="24px" viewBox="0 0 24 24"><path d="M20.41 4.94l-1.35-1.35c-.78-.78-2.05-.78-2.83 0L3 16.82V21h4.18L20.41 7.77c.79-.78.79-2.05 0-2.83zm-14 14.12L5 19v-1.36l9.82-9.82 1.41 1.41-9.82 9.83z"></path></svg></button>
             </div>
         </div>
     }
