--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -1,6 +1,7 @@
 ﻿@*Page for viewing full-sized images*@
 @page "/view/{id}"
 @using PSS.Backend
+@using System.IO
 @layout EmptyLayout
 
 @{
@@ -39,11 +40,13 @@
             <button onclick="notImplemented();" class="round_view_icon_btn info_btn"><svg width="24px" height="24px" style="fill: white" viewBox="0 0 24 24"><path d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"></path></svg></button>
             <div class="info-dropdown-content">
                 <span class="material-icons info-dropdown-icon" style="top: 22px"><svg width="24px" height="24px"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg></span>
-                <span class="info-dropdown-bigtext">@dateTaken.ToString("MMM d, yyyy")</span>
-                <span class="info-dropdown-smalltext">@dateTaken.ToString("ddd, h:m tt")</span>
+                <span class="info-dropdown-bigtext" style="top: 15px">@dateTaken.ToString("MMM d, yyyy")</span>
+                <span class="info-dropdown-smalltext" style="top: 34px">@dateTaken.ToString("ddd, h:m tt")</span>
                 <button onclick="notImplemented();" class="info-dropdown-edit-btn" style="top: 7px"><svg width="24px" height="24px" viewBox="0 0 24 24"><path d="M20.41 4.94l-1.35-1.35c-.78-.78-2.05-.78-2.83 0L3 16.82V21h4.18L20.41 7.77c.79-.78.79-2.05 0-2.83zm-14 14.12L5 19v-1.36l9.82-9.82 1.41 1.41-9.82 9.83z"></path></svg></button>
 
                 <span class="material-icons info-dropdown-icon" style="top: 67px"><svg width="24px" height="24px"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zm-5-7l-3 3.72L9 13l-3 4h12l-4-5z"></path></svg></span>
+                <span class="info-dropdown-bigtext" style="top: 60px">@Path.GetFileName(Connection.GetPathFromUuid(id))</span>
+
             </div>
         </div>
     }
