--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -60,12 +60,13 @@
                 <input type="number" style="" class="info-dropdown-textbox" min="">
                 <input type="number" style="" class="info-dropdown-textbox" min="">
                 <input type="number" style="margin-left: 10px" class="info-dropdown-textbox" min="">
-                <span class="info-dropdown-smalltext" style="top: 151px; right: 155px; font-size: 20px; font-weight: bold; color: black">:</span>
+                <span class="info-dropdown-smalltext" style="top: 151px; right: 158px; font-size: 20px; font-weight: bold; color: black">:</span>
                 <input type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="">
-                <span class="info-dropdown-smalltext" style="top: 151px; right: 96px; font-size: 20px; font-weight: bold; color: black">:</span>
+                <span class="info-dropdown-smalltext" style="top: 151px; right: 99px; font-size: 20px; font-weight: bold; color: black">:</span>
                 <input type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="">
-                <button class="info-dropdown-toggle-btn"></button>
-                @*TODO: button to toggle am/pm*@
+                <button class="info-dropdown-toggle-btn">AM</button>
+                <button class="info-dropdown-cancel-btn">Cancel</button>
+                <button style="margin-top: 6px; font-family: 'Product Sans'">Apply</button>
             </div>
         </div>
     }
