--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -64,7 +64,7 @@
                 <input type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="">
                 <span class="info-dropdown-smalltext" style="top: 151px; right: 99px; font-size: 20px; font-weight: bold; color: black">:</span>
                 <input type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="">
-                <button class="info-dropdown-toggle-btn">AM</button>
+                <button class="info-dropdown-toggle-btn">@Connection.GetPeriod(id)</button>
                 <button class="info-dropdown-cancel-btn">Cancel</button>
                 <button style="margin-top: 6px; font-family: 'Product Sans'">Apply</button>
             </div>
