--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -42,7 +42,7 @@
                 <span class="material-icons info-dropdown-icon" style="top: 22px"><svg width="24px" height="24px"><path d="M19 3h-1V1h-2v2H8V1H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V8h14v11zM9 9.5a2.5 2.5 0 0 0 0 5 2.5 2.5 0 0 0 0-5z"></path></svg></span>
                 <span class="info-dropdown-bigtext" style="top: 15px">@dateTaken.ToString("MMM d, yyyy")</span>
                 <span class="info-dropdown-smalltext" style="top: 34px">@dateTaken.ToString("ddd, h:m tt")</span>
-                <button onclick="notImplemented();" class="info-dropdown-edit-btn" style="top: 7px"><svg width="24px" height="24px" viewBox="0 0 24 24"><path d="M20.41 4.94l-1.35-1.35c-.78-.78-2.05-.78-2.83 0L3 16.82V21h4.18L20.41 7.77c.79-.78.79-2.05 0-2.83zm-14 14.12L5 19v-1.36l9.82-9.82 1.41 1.41-9.82 9.83z"></path></svg></button>
+                <button onclick="enableControls()" class="info-dropdown-edit-btn" style="top: 7px"><svg width="24px" height="24px" viewBox="0 0 24 24"><path d="M20.41 4.94l-1.35-1.35c-.78-.78-2.05-.78-2.83 0L3 16.82V21h4.18L20.41 7.77c.79-.78.79-2.05 0-2.83zm-14 14.12L5 19v-1.36l9.82-9.82 1.41 1.41-9.82 9.83z"></path></svg></button>
 
                 <span class="material-icons info-dropdown-icon" style="top: 68px"><svg width="24px" height="24px"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zm-5-7l-3 3.72L9 13l-3 4h12l-4-5z"></path></svg></span>
                 <span class="info-dropdown-bigtext" style="top: 70px">@Path.GetFileName(Connection.GetPathFromUuid(id))</span>
@@ -56,17 +56,17 @@
                 <span class="info-dropdown-smalltext" style="top: 134px; left: 204px">Minute</span>
                 <span class="info-dropdown-smalltext" style="top: 134px; left: 263px">Second</span>
 
-                <input type="number" style="margin-left: 4px; width: 55px;" class="info-dropdown-textbox" min="1900" max="9999" disabled value="@dateTaken.Year">
-                <input type="number" style="" class="info-dropdown-textbox" min="1" max="12" disabled value="@dateTaken.Month">
-                <input type="number" style="" class="info-dropdown-textbox" min="1" max="31" disabled value="@dateTaken.Day">
-                <input type="number" style="margin-left: 10px" class="info-dropdown-textbox" min="1" max="12" disabled value="@(((dateTaken.Hour + 11) % 12) + 1)"> @*https://stackoverflow.com/a/1306172*@
+                <input autocomplete="off" id="year-edit" type="number" style="margin-left: 4px; width: 55px;" class="info-dropdown-textbox" min="1900" max="9999" disabled value="@dateTaken.Year">
+                <input autocomplete="off" id="month-edit" type="number" style="" class="info-dropdown-textbox" min="1" max="12" disabled value="@dateTaken.Month">
+                <input autocomplete="off" id="day-edit" type="number" style="" class="info-dropdown-textbox" min="1" max="31" disabled value="@dateTaken.Day">
+                <input autocomplete="off" id="hour-edit" type="number" style="margin-left: 10px" class="info-dropdown-textbox" min="1" max="12" disabled value="@(((dateTaken.Hour + 11) % 12) + 1)"> @*https://stackoverflow.com/a/1306172*@
                 <span class="info-dropdown-smalltext" style="top: 151px; right: 158px; font-size: 20px; font-weight: bold; color: black">:</span>
-                <input type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="0" max="59" disabled value="@dateTaken.Minute">
+                <input autocomplete="off" id="minute-edit" type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="0" max="59" disabled value="@dateTaken.Minute">
                 <span class="info-dropdown-smalltext" style="top: 151px; right: 99px; font-size: 20px; font-weight: bold; color: black">:</span>
-                <input type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="0" max="59" disabled value="@dateTaken.Second">
-                <button class="info-dropdown-toggle-btn" disabled>@Connection.GetPeriod(id)</button>
-                <button class="info-dropdown-cancel-btn" disabled>Cancel</button>
-                <button style="margin-top: 6px; font-family: 'Product Sans'" disabled>Apply</button>
+                <input autocomplete="off" id="second-edit" type="number" style="margin-left: 7px" class="info-dropdown-textbox" min="0" max="59" disabled value="@dateTaken.Second">
+                <button id="period-btn" class="info-dropdown-toggle-btn" disabled>@Connection.GetPeriod(id)</button>
+                <button onclick="disableControls()" id="cancel-btn" class="info-dropdown-cancel-btn" disabled>Cancel</button>
+                <button id="apply-btn" style="margin-top: 6px; font-family: 'Product Sans'" disabled>Apply</button>
             </div>
         </div>
     }
