--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -1,6 +1,9 @@
 @page "/"
 @namespace PSS.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+    Layout = null;
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,10 +19,15 @@
     <script src="PSS.js"></script>
     <link rel="icon" href="gphotos icon.png">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"> @*https://stackoverflow.com/questions/50303454/how-to-use-the-new-material-design-icon-themes-outlined-rounded-two-tone-and*@
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </head>
 
-<body style="background-color: black; margin-right: 5px; margin-left: 0px; margin-top: 0px;">
+<body style="background-color: white; margin-right: 5px; margin-left: 0px; margin-top: 0px;">
     <component type="typeof(App)" render-mode="ServerPrerendered" /> @*Whatever this line is/does, removing it causes the app to not work... 🤔*@
+    <script src="_framework/blazor.server.js"></script> @*This stupid line is needed for some reason*@
 </body>
 </html>
 
