--- a/PSS/Pages/Test.razor
+++ b/PSS/Pages/Test.razor
@@ -1,31 +1,77 @@
 @*A blank page just for testing stuff*@
-@page "/test"
+@page "/test/{id}"
 @using PSS.Backend
 @layout EmptyLayout
 
-<MudGrid>
+@code
+{
+    [Parameter]
+    public string id { get; set; }
+
+    DateTime dateTaken;
+    DateTime? newDate;
+    int hour, minute, second;
+    string period;
+
+    protected override void OnInitialized() // = On Page Load https://stackoverflow.com/a/61554490
+    {
+        dateTaken = Connection.GetDateTaken(id);
+        newDate = Connection.GetDateTaken(id);
+        hour = ((dateTaken.Hour + 11) % 12) + 1; //Get 12 hour time: https://stackoverflow.com/a/1306172
+        minute = dateTaken.Minute;
+        second = dateTaken.Second;
+        period = Connection.GetPeriod(id);
+    }
+}
+
+@{
+    <MudGrid>
+        <MudItem xs="12" sm="6" md="4">
+            <MudDatePicker @ref="picker" @bind-Date="newDate" Style="Width: 130px" DateFormat="MM\/dd\/yyyy">
+                @*Escaping the '/' is the only way this would work...*@
+                <PickerActions>
+                    <MudButton OnClick="@(() => picker.Clear())">Clear</MudButton>
+                    <MudButton OnClick="@(() => picker.Close(false))">Cancel</MudButton>
+                    <MudButton Color="Color.Dark" OnClick="@UpdateDateTaken">Ok</MudButton>
+                </PickerActions>
+            </MudDatePicker>
+        </MudItem>
+    </MudGrid>
+
     <MudItem xs="12" sm="6" md="4">
-        <MudDatePicker @ref="picker" @bind-Date="date" Style="Width: 130px" DateFormat="MM\/dd\/yyyy"> @*Escaping the '/' is the only way this would work...*@
-            <PickerActions>
-                <MudButton OnClick="@(() => picker.Clear())">Clear</MudButton>
-                <MudButton OnClick="@(() => picker.Close(false))">Cancel</MudButton>
-                <MudButton Color="Color.Dark" OnClick="@UpdateDate">Ok</MudButton>
-            </PickerActions>
-        </MudDatePicker>
+        <MudTextField @bind-Value="@hour" Label="Hour" Placeholder="Hour" Variant="Variant.Text"></MudTextField>
     </MudItem>
-</MudGrid>
+
+    <MudItem xs="12" sm="6" md="4">
+        <MudTextField @bind-Value="@minute" Label="Minute" Placeholder="Minute" Variant="Variant.Text"></MudTextField>
+    </MudItem>
+
+    <MudItem xs="12" sm="6" md="4">
+        <MudTextField @bind-Value="@second" Label="Second" Placeholder="Second" Variant="Variant.Text"></MudTextField>
+    </MudItem>
+
+    <MudButton @ref="periodButton" OnClick="@TogglePeriod" T="string">@period</MudButton>
+
+    <MudButton OnClick="@UpdateDateTaken">Apply</MudButton>
+
+    void UpdateDateTaken()
+    {
+        picker.Close();
+        DateTime dateTime = (DateTime)newDate + new TimeSpan(Convert.ToInt32(hour), Convert.ToInt32(minute), Convert.ToInt32(second));
+
+        Connection.UpdateDateTaken("/Pics and Vids/Test Pics/20210502_143910.jpg", dateTime);
+    }
+}
 
 @code {
     MudDatePicker picker;
+    MudButton periodButton;
 
-    DateTime? date = DateTime.Today;
-}
-
-@functions
-{
-    void UpdateDate()
+    void TogglePeriod()
     {
-        picker.Close(true);
-        Connection.UpdateDateTaken("/Pics and Vids/Test Pics/20210502_143910.jpg", date);
+        if (period == "AM")
+            period = "PM";
+        else
+            period = "AM";
     }
 }
